--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -59,7 +59,9 @@
           <div class="col-md-3">
             <div class="card text-white bg-primary mb-3">
               <h6 class="m-1">Nationality:</h6>
-              <select class="form-select" id="selNationality" onchange="optionChanged(this.value)"></select>
+              <select class="form-select" id="selNationality" onchange="optionChanged(this.value)">
+                <option selected>All</option>
+              </select>
             </div>
             <br>
             <div class="card border-primary mb-3">
