--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -39,6 +39,10 @@
                 <li class="nav-item">
                 <a class="nav-link" href="/about_us">About Us</a>
                 </li>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="/sources">Sources</a>
+                </li>
             </ul>
         </div>
     </nav>
