--- a/app/templates/about_us.html
+++ b/app/templates/about_us.html
@@ -40,32 +40,33 @@
     <br/>
 
     <div class="container">
-    <h1>About Us</h1>
-    <br/>
         <div class="row">
-            <div class="col-md-3">
-            <h3><a href="https://github.com/martabaker">Marta Baker</a></h3>
-            <img src="static/images/project3_MB.jpeg" alt="Group Member 1" class="img-fluid">
-            <p>MB BIO</p>
+            <div class="col-md-12 text-center">
+              <h1>About Us</h1>
+              <br/>
+            </div>
+        <div class="row">
+            <div class="col-md-4 about-block">
+                <h3>Marta Baker</h3> 
+                <img src="static/images/project3_MB.jpeg" alt="Marta Baker" class="img-fluid">
+                <p>MB BIO</p>
+                <a href="https://github.com/martabaker">Marta Baker's GitHub</a>
             </div>
 
-        <div class="row">
-            <div class="col-md-3">
-            <h3><a href="https://github.com/KevinPCarney">Kevin Carney</a></h3>
-            <img src="static/images/project3_KC.jpeg" alt="Group Member 2" class="img-fluid">
-            <p>KC BIO</p>
+            <div class="col-md-4 about-block">
+                <h3>Kevin Carney</h3> 
+                <img src="static/images/project3_KC.jpeg" alt="Kevin Carney" class="img-fluid">
+                <p>KC BIO</p>
+                <a href="https://github.com/KevinPCarney">Kevin Carney's GitHub</a><br/>
+            </div>
+
+            <div class="col-md-4 about-block">
+                <h3>Katie Rebeck</h3> 
+                <img src="static/images/project3_KR.jpeg" alt="Katie Rebeck" class="img-fluid">
+                <p>KR BIO</p>
+                <a href="https://github.com/kjrebeck">Katie Rebeck's GitHub</a>
             </div>
         </div>
-
-        <div class="row">
-            <div class="col-md-3">
-            <h3><a href="https://github.com/kjrebeck">Katie Rebeck</a></h3>
-            <img src="static/images/project3_KR.jpeg" alt="Group Member 3" class="img-fluid">
-            <p>KR BIO</p>
-            </div>
-        </div>
-
     </div>
-
 </body>
 </html>
