--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -25,6 +25,9 @@
     <!-- Leaflet heatmap plugin-->
     <script type="text/javascript" src="static/js/leaflet-heat.js"></script>
 
+    <!-- Leaflet marker plugin-->
+    <script type="text/javascript" src="static/js/leaflet.extra-markers.min.js"></script>
+
     <!-- Marker cluster JavaScript code -->
     <script type="text/javascript" src="https://unpkg.com/leaflet.markercluster@1.0.3/dist/leaflet.markercluster.js"></script>
 
