--- a/app/templates/sources.html
+++ b/app/templates/sources.html
@@ -37,20 +37,17 @@
     </nav>
 
     <!-- add spacing -->
-    <br/>
-
-    <div class="header">
-        <h1>Sources</h1>
-    </div>
-
-    <div class="link-container">
-        <a href="https://www.kaggle.com/datasets/rohanrao/formula-1-world-championship-1950-2020">Kaggle Dataset: Formula 1 World Championship (1950 - 2024)</a>
-        <a href="https://www.formula1.com">Formula 1 Website</a>
-        <a href="https://public.tableau.com/app/profile/panki.shah/viz/Formula1_0/Formula1">Tableau Example of Formula 1 Dashboard</a>
-        <a href="https://bootswatch.com/simplex/">Bootswatch Simplex Theme</a>
-    </div>
-
+        <div class="header col-md-12">
+            <h1>Sources</h1>
+        </div>
+    <div class="parent-container">
+        <div class="link-container">
+            <a href="https://www.kaggle.com/datasets/rohanrao/formula-1-world-championship-1950-2020">Kaggle Dataset: Formula 1 World Championship (1950 - 2024)</a>
+            <a href="https://www.formula1.com">Formula 1 Website</a>
+            <a href="https://public.tableau.com/app/profile/panki.shah/viz/Formula1_0/Formula1">Tableau Example of Formula 1 Dashboard</a>
+            <a href="https://bootswatch.com/simplex/">Bootswatch Simplex Theme</a>
         </div>
     </div>
+
 </body>
 </html>
