--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
         <div class="container-fluid">
             <!-- Having issue getting the logo image loading -->
-            <a class="navbar-brand" href="/"><img src="../images/logo.jpg" width="45", height="30"></a>
+            <a class="navbar-brand" href="/"><img src="../images/logo.jpg" onerror="this.onerror=null; this.remove()" width="45", height="30"></a>
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
                 <a class="nav-link active" href="/">Home</a>
