--- a/app/templates/sunburst.html
+++ b/app/templates/sunburst.html
@@ -54,7 +54,7 @@
     <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h1>Formula 1 Driver Performance by Nationality</h1>
+            <h1>Formula 1 Sunburst</h1>
             <p>Use the interactive charts below to explore the dataset</p>
           </div>
         </div>
