Did some map work
Map is not rendering

--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
     crossorigin=""/>
-
+    
     <!-- Leaflet JavaScript code -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
@@ -25,8 +25,8 @@
     <!-- Leaflet heatmap plugin-->
     <script type="text/javascript" src="static/js/leaflet-heat.js"></script>
 
-    <!-- Leaflet marker plugin-->
-    <script type="text/javascript" src="static/js/leaflet.extra-markers.min.js"></script>
+    <!-- Leaflet marker plugin
+    <script type="text/javascript" src="static/js/leaflet.extra-markers.min.js"></script> -->
 
     <!-- Marker cluster JavaScript code -->
     <script type="text/javascript" src="https://unpkg.com/leaflet.markercluster@1.0.3/dist/leaflet.markercluster.js"></script>
@@ -87,7 +87,7 @@
                 <input type="number" value="10" id="launch_filter"> -->
 
                 <label for="country_filter">Country</label>
-                <select id="country_filter">
+                <select class="form-select" id="country_filter" onchange="optionChanged(this.value)">
                     <option selected>All</option>
                     <option>Argentina</option>
                     <option>Australia</option>
@@ -126,13 +126,13 @@
                     <option>USA</option>
                 </select>
 
-                <button id="filter">Filter!</button>
+                <!-- <button id="filter">Filter!</button> -->
             </div>
         </div>
         <hr/>
         <div class="row">
             <div class="col-md-12 text-center">
-                <div id="map-container"></div>
+                <div id="map"></div>
             </div>
         </div>
     </div>
