--- a/app/templates/sunburst.html
+++ b/app/templates/sunburst.html
@@ -61,7 +61,7 @@
         <br>
         <div class="row">
             <div class="col-md-12 text-center">
-                <div id="sunburst-container"></div>
+                <div id="sunburst"></div>
             </div>
         </div>
     </div>
