Got bubble chart to work!

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -22,7 +22,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/"><img src="../images/logo.jpg" onerror="this.onerror=null; this.remove()"  width="45", height="30"></a>
+            <a class="navbar-brand" href="/"><img src="static/images/logo.jpg" onerror="this.onerror=null; this.remove()"  width="45", height="30"></a>
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
                 <a class="nav-link" href="/">Home</a>
@@ -63,13 +63,13 @@
           <div class="col-md-3">
             <div class="card text-white bg-primary mb-3">
               <h6 class="m-1">Nationality:</h6>
-              <select class="form-select" id="selNationality" onchange="optionChanged(this.value)">
+              <select class="form-select" id="selNationality" >
                 <option selected>All</option>
               </select>
             </div>
             <div class="card text-white bg-primary mb-3">
               <h6 class="m-1">Team:</h6>
-              <select class="form-select" id="team_filter" onchange="optionChanged(this.value)">
+              <select class="form-select" id="team_filter" >
                 <option selected>All</option>
                 <option>Adams</option>
                 <option>AFM</option>
