user input added

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -63,7 +63,7 @@
           <div class="col-md-3">
             <div class="card text-white bg-primary mb-3">
               <h6 class="m-1">Nationality:</h6>
-              <select class="form-select" id="selNationality" >
+              <select class="form-select" id="selNationality" onchange="optionChanged(this.value)">
                 <option selected>All</option>
               </select>
             </div>
