--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -132,7 +132,7 @@
         <hr/>
         <div class="row">
             <div class="col-md-12 text-center">
-                <div id="map"></div>
+                <div id="map-container"></div>
             </div>
         </div>
     </div>
