--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -82,10 +82,7 @@
         </div>
         <hr/>
         <div class="row">
-            <div class="col-md-6">
-                <!-- <label for="launch_filter">Min Launches</label>
-                <input type="number" value="10" id="launch_filter"> -->
-
+            <div class="col-md-3 rowcenter">
                 <label for="country_filter">Country</label>
                 <select class="form-select" id="country_filter" onchange="optionChanged(this.value)">
                     <option selected>All</option>
@@ -125,8 +122,6 @@
                     <option>United States</option>
                     <option>USA</option>
                 </select>
-
-                <!-- <button id="filter">Filter!</button> -->
             </div>
         </div>
         <hr/>
