--- a/app/templates/sunburst.html
+++ b/app/templates/sunburst.html
@@ -60,6 +60,19 @@
         </div>
         <br>
         <div class="row">
+            <div class="col-md-6">
+                <label for="min_year">Min Year</label>
+                <input type="number" value="2010" id="min_year">
+                <label for="max_year">Max Year</label>
+                <input type="number" value="2024" id="max_year">
+
+                <button id="filter">Filter!</button>
+            </div>
+            <div class="col-md-6">
+                <p>Bacon ipsum dolor amet ribeye chicken leberkas ham hock meatloaf bresaola shoulder. Burgdoggen porchetta buffalo, kielbasa ham chicken filet mignon sirloin pancetta. Capicola biltong strip steak, drumstick tongue chislic pork belly jowl beef swine buffalo. Hamburger cupim shank chuck turkey venison frankfurter short ribs tail. Ham hock chicken shank beef ribs picanha biltong tail rump alcatra short ribs kevin cupim pork loin.</p>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-md-12 text-center">
                 <div id="sunburst"></div>
             </div>
