Changes to app.js and map

--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -82,9 +82,9 @@
         </div>
         <hr/>
         <div class="row">
-            <div class="col-md-3 rowcenter">
+            <div class="col-md-3 rowcenter card text-white bg-primary mb-2">
                 <label for="country_filter">Country</label>
-                <select class="form-select" id="country_filter" onchange="optionChanged(this.value)">
+                <select class="form-select " id="country_filter" onchange="optionChanged(this.value)">
                     <option selected>All</option>
                     <option>Argentina</option>
                     <option>Australia</option>
