--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -81,9 +81,9 @@
             </div>
         </div>
         <hr/>
-        <div class="row">
-            <div class="col-md-3 rowcenter card text-white bg-primary mb-2">
-                <label for="country_filter">Country</label>
+        <div class="row center p-2">
+            <div class="col-md-3 card text-white bg-primary p-0">
+                <label for="country_filter" class="m-1">Country</label>
                 <select class="form-select " id="country_filter" onchange="optionChanged(this.value)">
                     <option selected>All</option>
                     <option>Argentina</option>
