Updated text on Sunburst html

--- a/app/templates/sunburst.html
+++ b/app/templates/sunburst.html
@@ -69,7 +69,12 @@
                 <button id="filter" class="btn btn-primary">Filter!</button>
             </div>
             <div class="col-md-6">
-                <p>Bacon ipsum dolor amet ribeye chicken leberkas ham hock meatloaf bresaola shoulder. Burgdoggen porchetta buffalo, kielbasa ham chicken filet mignon sirloin pancetta. Capicola biltong strip steak, drumstick tongue chislic pork belly jowl beef swine buffalo. Hamburger cupim shank chuck turkey venison frankfurter short ribs tail. Ham hock chicken shank beef ribs picanha biltong tail rump alcatra short ribs kevin cupim pork loin.</p>
+                <p>
+                    Drivers change teams fairly regularly. 
+                    Use the chart below to see which drivers were on which teams for a given date range.
+                    The chart also demonstrates how long drivers were on each team and how many races they drove for the team.
+                    For example, some drivers are reserve drivers who raced for only 1 or 2 races, while other drivers signed multi-year deals and raced in every race.
+                </p>
             </div>
         </div>
         <div class="row">
