--- a/app/templates/about_us.html
+++ b/app/templates/about_us.html
@@ -48,21 +48,21 @@
         <div class="row">
             <div class="col-md-4 about-block">
                 <h3>Marta Baker</h3> 
-                <img src="static/images/project3_MB.jpeg" alt="Marta Baker" class="img-fluid">
+                <img src="static/images/Marta.jpg" alt="Marta Baker" class="img-fluid">
                 <p>MB BIO</p>
                 <a href="https://github.com/martabaker">Marta Baker's GitHub</a>
             </div>
 
             <div class="col-md-4 about-block">
                 <h3>Kevin Carney</h3> 
-                <img src="static/images/project3_KC.jpeg" alt="Kevin Carney" class="img-fluid">
+                <img src="static/images/Kevin.jpg" alt="Kevin Carney" class="img-fluid">
                 <p>KC BIO</p>
                 <a href="https://github.com/KevinPCarney">Kevin Carney's GitHub</a><br/>
             </div>
 
             <div class="col-md-4 about-block">
                 <h3>Katie Rebeck</h3> 
-                <img src="static/images/project3_KR.jpeg" alt="Katie Rebeck" class="img-fluid">
+                <img src="static/images/Katie.jpg" alt="Katie Rebeck" class="img-fluid">
                 <p>KR BIO</p>
                 <a href="https://github.com/kjrebeck">Katie Rebeck's GitHub</a>
             </div>
