Updated About-Us for Marta

--- a/app/templates/about_us.html
+++ b/app/templates/about_us.html
@@ -49,7 +49,7 @@
             <div class="col-md-4 about-block">
                 <h3>Marta Baker</h3> 
                 <img src="static/images/Marta.jpg" alt="Marta Baker" class="img-fluid">
-                <p>MB BIO</p>
+                <p>Marta is a Quality Control Data Analyst for a market research company. When she isn't working, she's hanging out with friends, reading, or watching copious amounts of sports with her 3 cats.</p>
                 <a href="https://github.com/martabaker">Marta Baker's GitHub</a>
             </div>
 
