updated bio for KC

--- a/app/templates/about_us.html
+++ b/app/templates/about_us.html
@@ -56,7 +56,7 @@
             <div class="col-md-4 about-block">
                 <h3>Kevin Carney</h3> 
                 <img src="static/images/Kevin.jpg" alt="Kevin Carney" class="img-fluid">
-                <p>KC BIO</p>
+                <p>Kevin is a specifications analyst who is currently working for General Motors. When he has time he enjoys playing Magic: The Gathering, and also enjoys watching Star Trek.  P.S. Sisko is best captain!</p>
                 <a href="https://github.com/KevinPCarney">Kevin Carney's GitHub</a><br/>
             </div>
 
