updated bio and pic KR

--- a/app/templates/about_us.html
+++ b/app/templates/about_us.html
@@ -63,7 +63,7 @@
             <div class="col-md-4 about-block">
                 <h3>Katie Rebeck</h3> 
                 <img src="static/images/Katie.jpg" alt="Katie Rebeck" class="img-fluid">
-                <p>KR BIO</p>
+                <p>Katie Rebeck is in Product Management for a variable data printing company. In her spare time she’s either dancing to music, learning something new, adventuring outdoors, or in the darkroom. </p>
                 <a href="https://github.com/kjrebeck">Katie Rebeck's GitHub</a>
             </div>
         </div>
