Added definitions to the homepage, need to refine a bit more and align containers

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -61,6 +61,47 @@
 
      <br/>
      <br/>
+
+     <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+              
+              <br/>
+            </div>
+        <div class="row">
+            <div class="col-md-4 about-block">
+                <h3>What is Formula 1?</h3> 
+                <p>Formula 1 is team-based car racing that occurs all across the world.  Up to 20 drivers can participate in any given race.  Each of the teams have two cars they can potentially use in a race.  An average F1 car can reach up to 370km/h or 229.91 mph! </p>
+                
+            </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    
+                    <br/>
+                </div>
+            <div class="row">
+                <div class="col-md-4 about-block">
+                    <h3>Definiton: Circuit</h3> 
+                    <p>A Circuit with regards to Formula 1 are the various tracks where the races take place.  As of August, 2024 there are 77 active circuits spread across 34 different countries throughout the world.  </p>
+                    
+                </div>
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        
+                        <br/>
+                    </div>
+                <div class="row">
+                    <div class="col-md-4 about-block">
+                        <h3>Definiton: Constructor</h3> 
+                        <p>A Constructor refers to the various teams that Formula 1 racers are associated with.  Though teams can be privately owned, it is not uncommon for an F1 team to be sponsored by company.  In order to be certified as a constructor, a perspective applicant must apply to the FIA (the governing body of F1), and pay a $200 million entry fee.   </p>
+                        float: right;
+                    </div>
+
+           
 </body>
 
 </html>
