--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -81,26 +81,25 @@
                     
                     <br/>
                 </div>
+            <div class="row justify-content-end align-items-start">
+                <div class="col-md-4 about-block ml-auto">
+                    <h3>Definiton: Constructor</h3> 
+                    <p>A Constructor refers to the various teams that Formula 1 racers are associated with.  Though teams can be privately owned, it is not uncommon for an F1 team to be sponsored by company.  In order to be certified as a constructor, a perspective applicant must apply to the FIA (the governing body of F1), and pay a $200 million entry fee.   </p>
+                    
+                </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    
+                    <br/>
+                </div>
             <div class="row">
                 <div class="col-md-4 about-block">
                     <h3>Definiton: Circuit</h3> 
                     <p>A Circuit with regards to Formula 1 are the various tracks where the races take place.  As of August, 2024 there are 77 active circuits spread across 34 different countries throughout the world.  </p>
                     
                 </div>
-
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 text-center">
-                        
-                        <br/>
-                    </div>
-                <div class="row">
-                    <div class="col-md-4 about-block">
-                        <h3>Definiton: Constructor</h3> 
-                        <p>A Constructor refers to the various teams that Formula 1 racers are associated with.  Though teams can be privately owned, it is not uncommon for an F1 team to be sponsored by company.  In order to be certified as a constructor, a perspective applicant must apply to the FIA (the governing body of F1), and pay a $200 million entry fee.   </p>
-                        float: right;
-                    </div>
-
            
 </body>
 
