Edited home page text

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -71,7 +71,7 @@
         <div class="row">
             <div class="col-md-4 about-block">
                 <h3>What is Formula 1?</h3> 
-                <p>Formula 1 is team-based car racing that occurs all across the world.  Up to 20 drivers can participate in any given race.  Each of the teams have two cars they can potentially use in a race.  An average F1 car can reach up to 370km/h or 229.91 mph! </p>
+                <p>Formula 1 is team-based car racing that occurs all across the world.  As of 2024, up to 20 drivers can participate in any given race. Historically, however, some races have had up to 34 drivers.  Each of the teams have two cars they can potentially use in a race.  An average F1 car can reach up to 370km/h or 229.91 mph! </p>
                 
             </div>
 
@@ -97,7 +97,7 @@
             <div class="row">
                 <div class="col-md-4 about-block">
                     <h3>Definiton: Circuit</h3> 
-                    <p>A Circuit with regards to Formula 1 are the various tracks where the races take place.  As of August, 2024 there are 77 active circuits spread across 34 different countries throughout the world.  </p>
+                    <p>A Circuit in Formula 1 is a track where the races take place.  As of August 2024, there have been 77 circuits that have been used for different races. They are spread across 34 different countries throughout the world.  </p>
                     
                 </div>
            
